@@ -1,10 +1,7 @@
 all: dircmp
 
 dircmp: dircmp.sh
-	echo '#!$(SHELL)' | cat - dircmp.sh | sed ' \
-		s,@DEFBIN@,$(DEFBIN),g; \
-		s,@SV3BIN@,$(SV3BIN),g; \
-		s,@DEFLIB@,$(DEFLIB),g' >dircmp
+	echo '#!$(SHELL)' | cat - dircmp.sh | sed ' s,@DEFBIN@,$(DEFBIN),g; s,@SV3BIN@,$(SV3BIN),g; s,@DEFLIB@,$(DEFLIB),g' >dircmp
 	chmod 755 dircmp
 
 install: all
